<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/chatFragment"
        android:title="@string/chat"
        android:icon="@drawable/chat"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/reportFragment"
        android:title="@string/report"
        android:icon="@drawable/report"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"/>

</menu>