<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.register.RegisterFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:background="@drawable/top_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textColor="@color/black_70"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/please_fill_your_biodata"
        android:textColor="@color/black_70"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_text_field_auth"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="38dp"
        android:background="@drawable/bg_text_field_auth"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="12dp"
        android:layout_marginHorizontal="38dp"
        android:background="@drawable/bg_text_field_auth">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_password"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:background="@null"/>

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/eye_enable"
            android:background="@drawable/ripple_round_gray_white"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_password"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="12dp"
        android:layout_marginHorizontal="38dp"
        android:background="@drawable/bg_text_field_auth">

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hint_password"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:background="@null"/>

        <ImageView
            android:id="@+id/img_confirm_password"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/eye_enable"
            android:background="@drawable/ripple_round_gray_white"
            android:layout_gravity="center"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:elevation="0dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_btn_auth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_password_confirm" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textSize="12sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/gray"/>

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textSize="12sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/purple"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>